chore(deps): add jjwt dependencies and JWT properties to application.properties